# Zeenova

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: preview_chart.py
tests/: test_calc.py  test_card.py  test_chart.py  test_coingecko_ath.py  test_config.py  test_edit_state.py  test_ens.py  test_etherscan.py  test_fear_greed.py  test_fx.py  test_handlers.py  test_marketcap.py  test_mexc.py  test_news.py  test_quote_sticker.py  test_services.py  test_solana.py  test_timeframes.py  test_timezones.py
zeenova_bot/: __init__.py  binance.py  bybit.py  calc.py  card.py  chart.py  coingecko.py  coinpaprika.py  config.py  edit_state.py  emojis.py  ens.py  etherscan.py  fear_greed.py  fx.py  handlers.py  http.py  main.py  marketcap.py  mexc.py  news.py  quote_sticker.py  services.py  solana.py  timeframes.py  timezones.py
